# bachelor-degree-thesis

./: .gitignore  README.md  golden  golden.hi  golden.hs  goldenNotation  goldenNotation.hi  goldenNotation.hs  test  test.hi  test.hs
aCalculatorForExactRealNumbers/: impl  impl.hi  impl.hs  implementation  implementation.hi  implementation.hs
golden-exact-reals/: README.md  golden-exact-reals.cabal
golden-exact-reals/dist-newstyle/cache/: config
golden-exact-reals/src/Data/: GoldenExactReals.hi  GoldenExactReals.hs
golden-exact-reals/src/Strings/: Strings.hi  Strings.hs
golden-exact-reals/src/Utils/: Utils.hi  Utils.hs
golden-exact-reals/test/: Test.hi  Test.hs
golden-notation-exact-reals/: CHANGELOG.md  golden-notation-exact-reals.cabal
golden-notation-exact-reals/dist-newstyle/cache/: config
relazione/: presentazione.ppsx  presentazione.pptx  references.bib  relazione.aux  relazione.bbl  relazione.blg  relazione.dvi  relazione.out  relazione.tex  relazione.toc  test.aux  test.dvi  test.tex
testCabal/: testCabal.cabal
testCabal/app/: Main.hs
testCabal/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
